# gicDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appmain.c  basehw.h  c_ex_handlers.c  config.h.in  gicv3.c  gicv3.h  my__main.c  toolchain.armclang  uart.c  uart.h  v8A.scat
asm/: basehw.S  ex_handlers.S  reset.S  vectors.S
